--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Send Greeting Email</title>
+</head>
+<body>
+
+<form action="send-email.php" method="POST" enctype="multipart/form-data">
+    <label>Enter Email:</label><br>
+    <input type="email" name="email" required><br><br>
+
+    <label>Upload PDF (max 2MB):</label><br>
+    <input type="file" name="pdf_file" accept="application/pdf" required><br><br>
+
+    <button type="submit">Submit</button>
+</form>
+
+</body>
+</html>
 
